force-app/main/default/objects/Competition__c/Competition__c.object-meta.xml
<CustomObject>
    <description>Represents leagues, tournaments, seasons, cups. Replaces Opportunity_Group__c.</description>
    <label>Competition</label>
    <nameField>
        <displayFormat>COMP-{0000}</displayFormat>
        <label>Competition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>