force-app/main/default/objects/Competition__c/fields/Broadcast_Rights_Value__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Rights_Value__c</fullName>
    <label>Broadcast Rights Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>