force-app/main/default/objects/Competition__c/fields/Competition_Type__c.field-meta.xml
<CustomField>
    <fullName>Competition_Type__c</fullName>
    <label>Competition Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic League</fullName>
            </value>
            <value>
                <fullName>Domestic Cup</fullName>
            </value>
            <value>
                <fullName>International League</fullName>
            </value>
            <value>
                <fullName>International Cup</fullName>
            </value>
            <value>
                <fullName>Continental Cup</fullName>
            </value>
            <value>
                <fullName>World Cup</fullName>
            </value>
            <value>
                <fullName>Olympic Event</fullName>
            </value>
            <value>
                <fullName>Friendly Tournament</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>