force-app/main/default/objects/Competition__c/fields/Division_Level__c.field-meta.xml
<CustomField>
    <fullName>Division_Level__c</fullName>
    <description>Tier level (1st, 2nd, etc.)</description>
    <label>Division Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>