force-app/main/default/objects/Competition__c/fields/ESPN_League_ID__c.field-meta.xml
<CustomField>
    <fullName>ESPN_League_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>ESPN League Code (e.g., eng.1, uefa.champions, nba)</inlineHelpText>
    <label>ESPN League ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>