force-app/main/default/objects/Competition__c/fields/Governing_Body__c.field-meta.xml
<CustomField>
    <fullName>Governing_Body__c</fullName>
    <label>Governing Body</label>
    <length>100</length>
    <type>Text</type>
</CustomField>