force-app/main/default/objects/Competition__c/fields/Number_of_Teams__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Teams__c</fullName>
    <description>Number of participating teams</description>
    <label>Number of Teams</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>