force-app/main/default/objects/Competition__c/fields/Organizing_Body__c.field-meta.xml
<CustomField>
    <fullName>Organizing_Body__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organizing Body</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitions</relationshipLabel>
    <relationshipName>Competitions</relationshipName>
    <type>Lookup</type>
</CustomField>