force-app/main/default/objects/Competition__c/fields/Prize_Money__c.field-meta.xml
<CustomField>
    <fullName>Prize_Money__c</fullName>
    <label>Prize Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>