force-app/main/default/objects/Competition__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Calendar season</description>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Competitions</relationshipLabel>
    <relationshipName>Competitions</relationshipName>
    <type>Lookup</type>
</CustomField>