force-app/main/default/objects/Competition__c/fields/Season_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Season_End_Date__c</fullName>
    <label>Season End Date</label>
    <type>Date</type>
</CustomField>