force-app/main/default/objects/Competition__c/fields/Season_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Season_Start_Date__c</fullName>
    <label>Season Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>