force-app/main/default/objects/Competition__c/fields/Season_Year__c.field-meta.xml
<CustomField>
    <fullName>Season_Year__c</fullName>
    <description>Season identifier (e.g., "2025-26" or "2025")</description>
    <label>Season Year</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>