force-app/main/default/objects/Competition__c/fields/Sport__c.field-meta.xml
<CustomField>
    <fullName>Sport__c</fullName>
    <label>Sport</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soccer</fullName>
                <default>true</default>
                <label>Soccer</label>
            </value>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Rugby Union</fullName>
            </value>
            <value>
                <fullName>Rugby League</fullName>
            </value>
            <value>
                <fullName>AFL</fullName>
            </value>
            <value>
                <fullName>Padel</fullName>
            </value>
            <value>
                <fullName>Olympics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>