force-app/main/default/objects/Competition__c/fields/Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Tier_Level__c</fullName>
    <description>League tier level (1st, 2nd, etc.)</description>
    <label>Tier Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>