force-app/main/default/objects/Competition__c/recordTypes/AFL_Season.recordType-meta.xml
<RecordType>
    <fullName>AFL_Season</fullName>
    <active>true</active>
    <label>AFL Season</label>
</RecordType>