force-app/main/default/objects/Competition__c/recordTypes/Cricket_Tournament.recordType-meta.xml
<RecordType>
    <fullName>Cricket_Tournament</fullName>
    <active>true</active>
    <label>Cricket Tournament</label>
</RecordType>