force-app/main/default/objects/Competition__c/recordTypes/Olympic_Games.recordType-meta.xml
<RecordType>
    <fullName>Olympic_Games</fullName>
    <active>true</active>
    <label>Olympic Games</label>
</RecordType>