force-app/main/default/objects/Competition__c/recordTypes/Padel_Tour.recordType-meta.xml
<RecordType>
    <fullName>Padel_Tour</fullName>
    <active>true</active>
    <label>Padel Tour</label>
</RecordType>