force-app/main/default/objects/Competition__c/recordTypes/Rugby_Competition.recordType-meta.xml
<RecordType>
    <fullName>Rugby_Competition</fullName>
    <active>true</active>
    <label>Rugby Competition</label>
</RecordType>