force-app/main/default/objects/Competition__c/recordTypes/Soccer_League.recordType-meta.xml
<RecordType>
    <fullName>Soccer_League</fullName>
    <active>true</active>
    <label>Soccer League</label>
</RecordType>